--- a/css/welcome.css
+++ b/css/welcome.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 .sumbit-btn .btn{
     color: #fff !important;
