ChatGPT page - Add example, capabilities and Limitations successfully.

--- a/css/user.css
+++ b/css/user.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    overflow-x: hidden;
+}
 .left-box{
     width: 17%;
     background-color: #202123;
