--- a/css/user.css
+++ b/css/user.css
@@ -15,3 +15,25 @@ body{
     top: 0;
     padding: 15px 7px;
 }
+.right-box{
+    width: 83%;
+    margin-left: 17%;
+}
+.right-box i{
+    font-size: 27px;
+}
+.right-box .text-box{
+    width: 32%;
+    margin: 0px auto; 
+    text-align: center;
+    background-color: rgba(218, 215, 215, 0.5);
+    padding: 10px 3px;
+    border-radius: 10px;
+}
+.right-box .ex-box{
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+.right-box .ex-box:hover{
+    background-color: #d9d9e3;
+}
